--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
 body {
-  background-image: url("../images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -10,6 +8,31 @@ body {
   font-family: 'Poppins', sans-serif;  
   margin: 0;
   padding: 0;
+  animation: slideshow 30s infinite; 
+}
+
+@keyframes slideshow {
+  0% {
+    background-image: url("../images/1.jpg");
+  }
+  14% {
+    background-image: url("../images/2.jpeg");
+  }
+  28% {
+    background-image: url("../images/3.jpeg");
+  }
+  42% {
+    background-image: url("../images/4.jpeg");
+  }
+  62% {
+    background-image: url("../images/5.jpeg");
+  }
+  80% {
+    background-image: url("../images/6.jpeg");
+  }
+  100% {
+    background-image: url("../images/7.jpg");
+  }
 }
 
 .App {
@@ -17,7 +40,7 @@ body {
   margin: 50px auto 0;
   width: 90%;
   max-width: 700px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 20px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
   padding: 20px 15px;
